k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: https
  selector:
    app: example-app
    tier: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: example-clusterip-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: example-app
---
apiVersion: v1
kind: Service
metadata:
  name: example-nodeport-service
spec:
  type: NodePort
  ports:
    - port: 30000
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: example-app
